--- a/src/pages/2023-03-01-environ-alger-augmente/index.fr.mdx
+++ b/src/pages/2023-03-01-environ-alger-augmente/index.fr.mdx
@@ -11,23 +11,21 @@ date: '2023-03-01'
 image: cover.jpg
 priority: 1
 embeddedImagesLocal:
-- _CCO6291.jpg
-- _CCO6597.jpg
-- _CCO6713.jpg
-- cover.jpg
-- _CCO6924.jpg
-- _CCO6984.jpg
-
+  - _CCO6291.jpg
+  - _CCO6597.jpg
+  - _CCO6713.jpg
+  - cover.jpg
+  - _CCO6924.jpg
+  - _CCO6984.jpg
 ---
-
 
 <ResponsiveIframe
   src="https://youtube.com/embed/JsDz2TZiLUw"
   width="1920"
   height="1080"
 />
-<br/>
-<br/>
+<br />
+<br />
 <ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />{' '}
 
 ## Le projet
@@ -40,24 +38,19 @@ Les étudiants ont été amenés à se filmer en train d'interpréter les mouvem
 
 Ce parcours en Réalité Augmentée a été dévoilé lors d'une soirée d'inauguration de grande envergure. Les visiteurs ont pu utiliser l'application gratuite _Reveality_ pour observer de manière poétique l'incorporation des étudiants au sein des photographies.
 
-
 ## Le Role de Reveality
 
 Le parcours a été élaboré dans un délai particulièrement restreint, englobant quelques heures d'ateliers en compagnie des étudiants, suivies de quelques heures dédiées à la post-production avant une diffusion publique immédiate.
 
 L'utilisation des outils de la plateforme _Reveality_ a considérablement accéléré le processus de post-production, en particulier le détourage des vidéos pour enlever le fond et ne conserver que les corps des étudiants. L'application _Reveality_, fonctionnelle sur Android et iPhone, a permis une diffusion sans délai et à grande échelle sans nécessiter de développer une application mobile dédiée.
 
-
-  
-
 ## Partenaires
-* [Pole Pixel](https://polepixel.fr/)
-* [Compagnie Natacha Paquignon](https://www.natachapaquignon.com/)
-* [MLIS de Villeurbanne](https://mediatheques.villeurbanne.fr/)
-* [CMTRA de Villeurbanne](https://cmtra.org/)
 
-Avec la participation du Collège Jean Jaurès, Collège Cerene, L’IRSAM Clairefontaine, et le Lycée Lumière. 
+- [Pole Pixel](https://polepixel.fr/)
+- [Compagnie Natacha Paquignon](https://www.natachapaquignon.com/)
+- [MLIS de Villeurbanne](https://mediatheques.villeurbanne.fr/)
+- [CMTRA de Villeurbanne](https://cmtra.org/)
+
+Avec la participation du Collège Jean Jaurès, Collège Cerene, L’IRSAM Clairefontaine, et le Lycée Lumière.
 
 [Lien vers les détails de l'exposition](https://polepixel.fr/evenement/son-oeil-dans-ma-main-alger-1961-2019/)
-
-
