--- a/src/pages/2023-03-01-environ-alger-augmente/index.mdx
+++ b/src/pages/2023-03-01-environ-alger-augmente/index.mdx
@@ -11,23 +11,21 @@ date: '2023-03-01'
 image: cover.jpg
 priority: 1
 embeddedImagesLocal:
-- _CCO6291.jpg
-- _CCO6597.jpg
-- _CCO6713.jpg
-- cover.jpg
-- _CCO6924.jpg
-- _CCO6984.jpg
-
+  - _CCO6291.jpg
+  - _CCO6597.jpg
+  - _CCO6713.jpg
+  - cover.jpg
+  - _CCO6924.jpg
+  - _CCO6984.jpg
 ---
-
 
 <ResponsiveIframe
   src="https://youtube.com/embed/JsDz2TZiLUw"
   width="1920"
   height="1080"
 />
-<br/>
-<br/>
+<br />
+<br />
 <ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />{' '}
 
 ## The project
@@ -45,16 +43,14 @@ This Augmented Reality experience was unveiled during a grand inauguration eveni
 The project was developed within a particularly tight timeframe, involving a few hours of workshops with the students, followed by a few hours dedicated to post-production before an immediate public release.
 
 The utilization of tools from the _Reveality_ platform significantly expedited the post-production process, notably the video clipping to remove backgrounds and retain only the students' bodies. The _Reveality_ app, compatible with Android and iPhone, facilitated an immediate release without the need to create and publish a dedicated mobile app.
-  
 
-##  Partners
-* [Pole Pixel](https://polepixel.fr/)
-* [Compagnie Natacha Paquignon](https://www.natachapaquignon.com/)
-* [MLIS de Villeurbanne](https://mediatheques.villeurbanne.fr/)
-* [CMTRA de Villeurbanne](https://cmtra.org/)
+## Partners
+
+- [Pole Pixel](https://polepixel.fr/)
+- [Compagnie Natacha Paquignon](https://www.natachapaquignon.com/)
+- [MLIS de Villeurbanne](https://mediatheques.villeurbanne.fr/)
+- [CMTRA de Villeurbanne](https://cmtra.org/)
 
 With the participation of Jean Jaurès College, Cerene College, IRSAM Clairefontaine, and Lumière High School.
 
 [Exhibition details](https://polepixel.fr/evenement/son-oeil-dans-ma-main-alger-1961-2019/)
-
-
