--- a/src/pages/2023-08-31-porte-auguste-nimes/index.mdx
+++ b/src/pages/2023-08-31-porte-auguste-nimes/index.mdx
@@ -11,21 +11,20 @@ date: '2023-08-31'
 image: cover2.jpg
 priority: 1
 embeddedImagesLocal:
-- 1.jpg
-- 2.jpg
-- 3.jpg
-- IMG_0675.jpg
-- IMG_0679.jpg
+  - 1.jpg
+  - 2.jpg
+  - 3.jpg
+  - IMG_0675.jpg
+  - IMG_0679.jpg
 ---
-
 
 <ResponsiveIframe
   src="https://youtube.com/embed/74OepTiRQ0c"
   width="1080"
   height="1080"
 />
-<br/>
-<br/>
+<br />
+<br />
 
 We experimented with the creation of an augmented tour of the Auguste Gate in collaboration with the City of Nîmes.
 
@@ -37,20 +36,12 @@ The experience was produced in a remarkably short timeframe of 6 hours (includin
 
 ## The project will be publicly presented for the Heritage Days 2023.
 
-
-
-
-
-
-
-<br/>
-
+<br />
 
 <ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />{' '}
 
+## Partners
 
-## Partners 
-
-* [Nîmes City](//www.nimes.fr/)
-* Museums and Heritage Direction
-* [Vivien Barrière](https://www.cyu.fr/m-vivien-barriere), researcher and lecturer in history and archaeology at Cergy Paris University.
+- [Nîmes City](//www.nimes.fr/)
+- Museums and Heritage Direction
+- [Vivien Barrière](https://www.cyu.fr/m-vivien-barriere), researcher and lecturer in history and archaeology at Cergy Paris University.
