--- a/src/pages/page-about/index.mdx
+++ b/src/pages/page-about/index.mdx
@@ -11,11 +11,13 @@ embeddedImagesLocal:
   - profile.jpg
 ---
 
-<MdxImage alt={"Portrait picture of Maxime Touroute"} image={props.data.mdx.frontmatter.embeddedImagesLocal[0]} />
+<MdxImage
+  alt={'Portrait picture of Maxime Touroute'}
+  image={props.data.mdx.frontmatter.embeddedImagesLocal[0]}
+/>
 
 <br />
 <br />
-
 
 Passionate by cinema, photography and digital arts, I work on projects where creativity and technology meet.
 
@@ -23,46 +25,42 @@ Being a full-fledged engineer, I'm not afraid to work with state of the art tech
 
 ### — What I do
 
-* Join artistic teams as a developer, technician, videographer
-* Create and exhibit digital artworks
-* Build and share software with cultural institutions and artists
-
+- Join artistic teams as a developer, technician, videographer
+- Create and exhibit digital artworks
+- Build and share software with cultural institutions and artists
 
 ### — My skilsl
 
-* Software development (wab, AI, 3D, native...)
-* Art Direction, Production
-* Project management, team management
-* Entrepreneurship
-* Film making, from shooting to post-production
+- Software development (wab, AI, 3D, native...)
+- Art Direction, Production
+- Project management, team management
+- Entrepreneurship
+- Film making, from shooting to post-production
 
+### — Currently open to new projects
 
-
-### — Currently open to new projects 
 [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
 
-<br/>
-<br/>
-<br/>
+<br />
+<br />
+<br />
 
-
-<br/>
-<br/>
-<br/>
-  
+<br />
+<br />
+<br />
 
 #### Distinctions, Awards, Exhibitions
 
 - (Upcoming Events) Check my [Instagram](http://instagram.com/maximetouroute)
 
-- (2023) Of a Mind, Irlande 
-  **Performance using [Audio Broadcaster](/audio-broadcaster#content) Produced by [Listen and Breathe](//www.listenandbreathe.live)** 
+- (2023) Of a Mind, Irlande
+  **Performance using [Audio Broadcaster](/audio-broadcaster#content) Produced by [Listen and Breathe](//www.listenandbreathe.live)**
 
 - (2023) Le Grand Déménagement du CCO, Villeurbanne  
- **Performance using [Audio Broadcaster Software](/audio-broadcaster#content) Produced by [Natacha Paquignon](//natachapaquignon.com)** 
+  **Performance using [Audio Broadcaster Software](/audio-broadcaster#content) Produced by [Natacha Paquignon](//natachapaquignon.com)**
 
 - (2023) Festi Lumi, Mapping, Corse  
- **[Painting Mirror](/painting-mirror#content)** 
+  **[Painting Mirror](/painting-mirror#content)**
 
 - (2023) Nuit Blanche, Mapping, Paris  
   **[Live Drawing](/livedrawing#content)**
@@ -71,7 +69,7 @@ Being a full-fledged engineer, I'm not afraid to work with state of the art tech
   **[Live Drawing](/livedrawing#content)**
 
 - (2022) Art Residency at la Maison des Métallos, Paris  
- **[Smart Faune](/smart-faune#content)**  
+  **[Smart Faune](/smart-faune#content)**
 
 - (2022) Digital November, Remote Mapping, Yanhon, Myanmar  
   **[Live Drawing](/livedrawing#content)**
@@ -83,7 +81,7 @@ Being a full-fledged engineer, I'm not afraid to work with state of the art tech
   **Produit par [Natacha Paquignon](https://www.natachapaquignon.com/)**
 
 - (2022) **Pépite Prize Ile-De-France for [Reveality](https://www.reveality.io/)  
-  **Delivered by [Pepite France](https://www.pepite-france.fr/)**
+  **Delivered by [Pepite France](https://www.pepite-france.fr/)\*\*
 
 - (2022) Dome Mapping, Plemeur-Bodou  
   **[Live Drawing](/livedrawing#content)**
