New : small fixes

--- a/src/pages/2023-03-01-environ-alger-augmente/index.mdx
+++ b/src/pages/2023-03-01-environ-alger-augmente/index.mdx
@@ -36,7 +36,7 @@ The goal was to establish a connection between the work of two photographers who
 
 Students were prompted to film themselves interpreting movements and dances inspired by Raymond Depardon's photographs. These recordings were subsequently integrated into Kamel Daoud's images using Augmented Reality.
 
-This Augmented Reality experience was unveiled during a grand inauguration evening. Visitors were able to use the free app _Reveality_ to poetically observe the incorporation of the students into the photographs.
+This experience was unveiled during a grand inauguration evening. Visitors were invited to use the free app _Reveality_ to poetically observe the incorporation of the students into the photographs.
 
 ## Reveality's role
 
@@ -53,4 +53,5 @@ The utilization of tools from the _Reveality_ platform significantly expedited t
 
 With the participation of Jean Jaurès College, Cerene College, IRSAM Clairefontaine, and Lumière High School.
 
-[Exhibition details](https://polepixel.fr/evenement/son-oeil-dans-ma-main-alger-1961-2019/)
+[Event details](//polepixel.fr/evenement/son-oeil-dans-ma-main-alger-1961-2019/)  
+[More about the artistic project](//www.natachapaquignon.com/post/sampling-et-danse-augment%C3%A9e-p%C3%B4le-pixel-mars-2023)
