--- a/src/pages/2023-07-01-cite-sciences/index.mdx
+++ b/src/pages/2023-07-01-cite-sciences/index.mdx
@@ -4,7 +4,7 @@ layout: article
 category: portfolio
 language: en
 title: Carrefour Numérique Augmenté
-subtitle: Family workshops, Cité des Sciences, Paris
+subtitle: Family workshops, Cité des Sciences
 tags: none
 description: We organized six augmented reality creation workshops for the summer program at the Carrefour Numérique in the Cité des Sciences.
 date: '2023-07-07'
@@ -27,8 +27,8 @@ embeddedImagesLocal:
 <br />
 <br />
 
-We organized six augmented reality creation workshops for the summer program at the Carrefour Numérique in the Cité des Sciences. We helped participants to film themselves and make their own virtual doubles with the _Reveality_ app. Each participant projected its very own double in location and in augmented realiy.
-The content produced during these workshops was exhibited to the general public for two months in a section accessible on the app.
+We organized six augmented reality creation workshops for the summer program at the Carrefour Numérique in the Cité des Sciences, Paris. We helped participants to film themselves and make their own virtual doubles with the _Reveality_ app. Each participant projected their very own doubles in augmented reality.
+The content produced during the workshops was exhibited to visitors for two months in a tour accessible on the app.
 
 <br />{' '}
 
