--- a/src/pages/2023-08-31-porte-auguste-nimes/index.mdx
+++ b/src/pages/2023-08-31-porte-auguste-nimes/index.mdx
@@ -26,15 +26,15 @@ embeddedImagesLocal:
 <br />
 <br />
 
-We experimented with the creation of an augmented tour of the Auguste Gate in collaboration with the City of Nîmes.
+We created an augmented tour of the Auguste Gate in collaboration with the City of Nîmes.
 
 The public is invited to explore the site with the _Reveality_ app to bring Vivien Barrière to life, a tour guide sharing anecdotes about the gate's history.
 
-The tour is enhanced with sound content and archival images directly accessible through the app.
+The tour is enhanced with sound content and archives images directly accessible through the app.
 
-The experience was produced in a remarkably short timeframe of 6 hours (including writing and production) thanks to the post-production tools provided by Reveality, which enabled us to capture on-site content using a simple smartphone (see photos).
+It was produced in a remarkably short timeframe of 6 hours (including writing and production) thanks to the post-production tools provided by Reveality, enabling us to capture on-site content using a simple smartphone (see photos).
 
-## The project will be publicly presented for the Heritage Days 2023.
+## The project will be publicly showcased for the Heritage Days 2023.
 
 <br />
 
@@ -44,4 +44,4 @@ The experience was produced in a remarkably short timeframe of 6 hours (includin
 
 - [Nîmes City](//www.nimes.fr/)
 - Museums and Heritage Direction
-- [Vivien Barrière](https://www.cyu.fr/m-vivien-barriere), researcher and lecturer in history and archaeology at Cergy Paris University.
+- [Vivien Barrière](https://www.cyu.fr/m-vivien-barriere), Researcher and lecturer in history and archaeology at Cergy Paris University.
