Fix : gatsby images doesn't like underscores

--- a/src/pages/2023-03-01-environ-alger-augmente/index.fr.mdx
+++ b/src/pages/2023-03-01-environ-alger-augmente/index.fr.mdx
@@ -11,12 +11,12 @@ date: '2023-03-01'
 image: cover.jpg
 priority: 1
 embeddedImagesLocal:
-  - _CCO6291.jpg
-  - _CCO6597.jpg
-  - _CCO6713.jpg
+  - CCO6291.jpg
+  - CCO6597.jpg
+  - CCO6713.jpg
   - cover.jpg
-  - _CCO6924.jpg
-  - _CCO6984.jpg
+  - CCO6924.jpg
+  - CCO6984.jpg
 ---
 
 <ResponsiveIframe
