New : update bits and fix typo

--- a/src/pages/page-about/index.mdx
+++ b/src/pages/page-about/index.mdx
@@ -30,11 +30,11 @@ Being a full-fledged engineer, I'm not afraid to work with state of the art tech
 
 ### — My skills
 
-* Software development (wab, AI, 3D, native...)
-* Art Direction, Production
+* Software development (web, AI, 3D, native...)
+* Art Direction, production
 * Project management, team management
 * Entrepreneurship
-* Film making, from shooting to post-production
+* Film making from shooting to post-production
 
 
 
@@ -82,7 +82,7 @@ Being a full-fledged engineer, I'm not afraid to work with state of the art tech
 - (2022) Festival de la Science, Exposition Réalité Augmentée  
   **Produit par [Natacha Paquignon](https://www.natachapaquignon.com/)**
 
-- (2022) **Pépite Prize Ile-De-France for [Reveality](https://www.reveality.io/)  
+- (2022) **Pépite Prize Ile-De-France** for [Reveality](https://www.reveality.io/)  
   **Delivered by [Pepite France](https://www.pepite-france.fr/)**
 
 - (2022) Dome Mapping, Plemeur-Bodou  
