Fix : name error

--- a/src/pages/2023-03-01-environ-alger-augmente/index.fr.mdx
+++ b/src/pages/2023-03-01-environ-alger-augmente/index.fr.mdx
@@ -32,9 +32,9 @@ embeddedImagesLocal:
 
 Nous avons conçu et réalisé un parcours en Réalité Augmentée dans le cadre d'une exposition photo, en collaboration avec de jeunes étudiants en phase d'insertion professionnelle.
 
-L'objectif était d'établir un lien entre le travail de deux photographes dont les œuvres étaient présentées dans l'exposition : d'une part, Raymond Depardon, connu pour ses photographies de la vie quotidienne en milieu urbain, et d'autre part, Kamel Daoud, dont les clichés mettent en scène des paysages dépourvus de toute présence humaine.
+L'objectif était d'établir un lien entre le travail de deux photographes dont les œuvres étaient présentées dans l'exposition : d'une part, Raymond Depardon, connu pour ses photographies de la vie quotidienne en milieu urbain, et d'autre part, Karim Kal, dont les clichés mettent en scène des paysages dépourvus de toute présence humaine.
 
-Les étudiants ont été amenés à se filmer en train d'interpréter des mouvements et des danses inspirés des photographies de Raymond Depardon. Ces enregistrements ont ensuite été intégrés en Réalité Augmentée dans les clichés de Kamel Daoud.
+Les étudiants ont été amenés à se filmer en train d'interpréter des mouvements et des danses inspirés des photographies de Raymond Depardon. Ces enregistrements ont ensuite été intégrés en Réalité Augmentée dans les clichés de Karim Kal.
 
 Ce parcours en Réalité Augmentée a été dévoilé lors d'une grande soirée d'inauguration. Les visiteurs ont pu utiliser l'application gratuite _Reveality_ pour observer de manière poétique l'incorporation des étudiants dans les photographies.
 
@@ -53,5 +53,5 @@ L'utilisation des outils de la plateforme _Reveality_ a considérablement accél
 
 Avec la participation du Collège Jean Jaurès, Collège Cerene, L’IRSAM Clairefontaine, et le Lycée Lumière.
 
-[Détails de l'exposition](https://polepixel.fr/evenement/son-oeil-dans-ma-main-alger-1961-2019/) 
+[Détails de l'exposition](https://polepixel.fr/evenement/son-oeil-dans-ma-main-alger-1961-2019/)  
 [Plus à propos du projet artistique](//www.natachapaquignon.com/post/sampling-et-danse-augment%C3%A9e-p%C3%B4le-pixel-mars-2023)
