--- a/src/pages/2023-03-01-environ-alger-augmente/index.mdx
+++ b/src/pages/2023-03-01-environ-alger-augmente/index.mdx
@@ -32,9 +32,9 @@ embeddedImagesLocal:
 
 We created an Augmented Reality experience within the framework of a photography exhibition, in collaboration with young students in the process of professional integration.
 
-The goal was to establish a connection between the work of two photographers whose pieces were showcased in the exhibition: on one hand, Raymond Depardon, renowned for his photographs capturing urban everyday life, and on the other, Kamel Daoud, whose shots depict landscapes devoid of human presence.
+The goal was to establish a connection between the work of two photographers whose pieces were showcased in the exhibition: on one hand, Raymond Depardon, renowned for his photographs capturing urban everyday life, and on the other, Karim Kal, whose shots depict landscapes devoid of human presence.
 
-Students were prompted to film themselves interpreting movements and dances inspired by Raymond Depardon's photographs. These recordings were subsequently integrated into Kamel Daoud's images using Augmented Reality.
+Students were prompted to film themselves interpreting movements and dances inspired by Raymond Depardon's photographs. These recordings were subsequently integrated into Karim Kal's images using Augmented Reality.
 
 This experience was unveiled during a grand inauguration evening. Visitors were invited to use the free app _Reveality_ to poetically observe the incorporation of the students into the photographs.
 
