New : update about

--- a/src/pages/page-about/index.mdx
+++ b/src/pages/page-about/index.mdx
@@ -55,11 +55,24 @@ Being a full-fledged engineer, I'm not afraid to work with state of the art tech
 
 - (Upcoming Events) Check my [Instagram](http://instagram.com/maximetouroute)
 
-- (2023) Of a Mind, Irlande 
-  **Performance using [Audio Broadcaster](/audio-broadcaster#content) Produced by [Listen and Breathe](//www.listenandbreathe.live)** 
+- (2023) Projection Mapping, Prague  
+  **[Live Drawing](/livedrawing#content)**
+
+- (2023) Projection Mapping, Culture Night, Dublin  
+  **[Painting Mirror](/painting-mirror#content)**
+
+- (2023) Chartres Light Festival, France  
+  **[Painting Mirror](/painting-mirror#content)**
+
+- (2023) Of a Mind, Irlande
+  **Performance using [Audio Broadcaster](/audio-broadcaster#content) Produced by [Listen and Breathe](//www.listenandbreathe.live)**
 
 - (2023) Le Grand Déménagement du CCO, Villeurbanne  
  **Performance using [Audio Broadcaster Software](/audio-broadcaster#content) Produced by [Natacha Paquignon](//natachapaquignon.com)** 
+
+- (2023) Art Residency, Cité des Sciences, Paris  
+  **Workshops and XR content creation with families and public**
+  **[Reveality](/reveality#content)**
 
 - (2023) Festi Lumi, Mapping, Corse  
  **[Painting Mirror](/painting-mirror#content)** 
