feat: 2023 projects and beyond

--- a/src/pages/2018-10-30-innocent-words/index.es.mdx
+++ b/src/pages/2018-10-30-innocent-words/index.es.mdx
@@ -2,7 +2,7 @@
 path: /innocentWords
 layout: article
 category: portfolio
-language: fr
+language: es
 title: Innocent Words
 subtitle: Cortometraje
 tags: other
