--- a/src/pages/2020-01-01-deep-roto/index.mdx
+++ b/src/pages/2020-01-01-deep-roto/index.mdx
@@ -22,4 +22,4 @@ embeddedImagesLocal:
 
 [Direct Link](https://www.linkedin.com/feed/update/urn:li:activity:6768091473599627264/)
 
-Software using state of the art mathematics and artificial intelligence to **detour videos without the need for green screen**.
+Software using state of the art mathematics and artificial intelligence to **detour videos without the need for green screen**. Made in 2019. No longer supported (because those AIs are now widely accessible!).
