--- a/src/pages/2023-03-01-audio-broadcaster/index.es.mdx
+++ b/src/pages/2023-03-01-audio-broadcaster/index.es.mdx
@@ -45,7 +45,7 @@ Use un teléfono o una computadora para transmitir audio. El audio puede proveni
 
 ## Casos de uso
 
-* Audiodescripción en vivo
+* Audiodescripción en vivo, Accesibilidad
 * Visitas guiadas
 * Recorridos de sonido
 * Conciertos silenciosos
@@ -53,6 +53,10 @@ Use un teléfono o una computadora para transmitir audio. El audio puede proveni
 * Arte sonoro, creaciones originales
 * ¿Tiene otra idea? [¡Díganos!](mailto:maxime.touroute@gmail.com)
 
+### Ellos utilizan este software
+* [Of a Mind](/of-a-mind)
+* [Wonderbox](/wonderbox)
+* [Smart Faune](/smart-faune)
 
 <br/>
 <br/>
