--- a/src/pages/2023-03-01-audio-broadcaster/index.fr.mdx
+++ b/src/pages/2023-03-01-audio-broadcaster/index.fr.mdx
@@ -17,6 +17,7 @@ embeddedImagesLocal:
 ---
 
 ![Interface du logiciel Audio Broadcaster](0.jpg)
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />{' '}
 <br/>
 <br/>
 
@@ -43,7 +44,7 @@ Le public ouvre une page web (ou scanne un QRCode) et reçoit le signal audio li
 
 ## Cas d'usages
 
-* Audiodescription live
+* Audiodescription live, accessibilité
 * Visites guidées
 * Parcours sonores
 * Concerts silencieux
@@ -51,11 +52,10 @@ Le public ouvre une page web (ou scanne un QRCode) et reçoit le signal audio li
 * Art sonore, créations originales
 * Une autre idée ? [Dites le nous !](mailto:maxime.touroute@gmail.com)
 
+### Ils utilisent ce logiciel
+* [Of a Mind](/of-a-mind)
+* [Wonderbox](/wonderbox)
+* [Smart Faune](/smart-faune)
 
-<br/>
-<br/>
-
-<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />{' '}
-  
 
 ### Accès sur demande à [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
