--- a/src/pages/2023-03-01-live-maker/index.es.mdx
+++ b/src/pages/2023-03-01-live-maker/index.es.mdx
@@ -21,4 +21,14 @@ Live Maker es una herramienta que transforma los teléfonos inteligentes en disp
 
 _Más información próximamente..._
 
+
+### Ellos utilizan este software
+* [Live Drawing](/livedrawing)
+* [Painting Mirror](/painting-mirror)
+* [Conte d'un Futur Commun](/conte-dun-futur-commun)
+* [Le Motel des Destins Croisés](/motel-destins-croises)
+* [La Bulle](/la-bulle)
+* [Monolith](/monolith)
+* [Babel](/babel)
+
 ### Solicite acceso o más información en [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
