--- a/src/pages/2023-03-01-live-maker/index.mdx
+++ b/src/pages/2023-03-01-live-maker/index.mdx
@@ -22,4 +22,13 @@ Live Maker is a tool to transform smartphones in interactive surfaces (send pict
 
 _More infos coming soon..._
 
+### They use this software
+* [Live Drawing](/livedrawing)
+* [Painting Mirror](/painting-mirror)
+* [Conte d'un Futur Commun](/conte-dun-futur-commun)
+* [Le Motel des Destins Croisés](/motel-destins-croises)
+* [La Bulle](/la-bulle)
+* [Monolith](/monolith)
+* [Babel](/babel)
+
 ### Request access and more infos at [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
