--- a/src/pages/2023-12-01-conte-dun-futur-commun/index.es.mdx
+++ b/src/pages/2023-12-01-conte-dun-futur-commun/index.es.mdx
@@ -2,7 +2,7 @@
 path: /conte-dun-futur-commun
 layout: article
 category: portfolio
-language: en
+language: es
 title: Tale of a Common Future
 subtitle: Immersive Performance
 tags: other
