--- a/src/pages/2023-12-01-conte-dun-futur-commun/index.fr.mdx
+++ b/src/pages/2023-12-01-conte-dun-futur-commun/index.fr.mdx
@@ -11,7 +11,12 @@ date: '2023-01-01'
 image: cover.jpg
 priority: 2
 embeddedImagesLocal:
+- 1.webp
+- 2.webp
+- 3.webp
+- 4.webp
 - cover.jpg
+- 5.webp
 ---
 
 <br/>
@@ -26,15 +31,20 @@ embeddedImagesLocal:
 [Lien Direct](https://www.youtube.com/embed/kLPpmxxGzkA?si=-IzW3xV7_M7EYdHX)
 
 
-Conte d’un futur commun est un spectacle immersif interprété par une conteuse, un musicien et un illustrateur.
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />{' '}
+
+
+
+Spectacle immersif interprété par une conteuse, un musicien et un illustrateur.
 Le public contribue au développement de l’histoire avec : des outils numériques, des discussions, des réflexions…  
+  
 Cette œuvre veut créer un espace propice pour aborder les thématiques sociétales qui aujourd’hui nous préoccupent : l’injustice, l’écologie, la guerre.
 
 Le but est que chaque spectateur·trice ressorte avec le sentiment de pouvoir contribuer par son expérience et son imaginaire à un avenir plus optimiste et joyeux.
 
 
-### Role
-Mise à disposition du logiciel [live-maker](/live-maker)
+### Rôle
+Mise à disposition du logiciel mutualisé [live-maker](/live-maker) permettant une interaction massive en temps-réel.
 
 
 ### Distribution
@@ -45,4 +55,9 @@ Illustrateur : Maxime Hurdequint
 Auteurs de logiciel : Rémy Dupanloup et Maxime Touroute
 
 ### Diffusion
-[production@aadn.org](mailto:production@aadn.org)
+En planétarium, mais pas que. Tout espace avec un mur blanc pour vidéoprojeter peut accueillir le projet. Ateliers de médiation disponibles.  
+Contact : [production@aadn.org](mailto:production@aadn.org)
+  
+  
+
+_Crédits photo : © A.Robin-EPPDCSI_
