--- a/src/pages/2024-01-04-wonderbox/index.fr.mdx
+++ b/src/pages/2024-01-04-wonderbox/index.fr.mdx
@@ -9,7 +9,7 @@ tags: other
 description: Spectacle de danse
 date: '2024-01-04'
 image: cover.jpg
-priority: 1
+priority: 2
 embeddedImagesLocal:
 - cover.jpg
 ---
@@ -18,8 +18,17 @@ embeddedImagesLocal:
 ![Image d'illustration](cover.jpg)
 
 
+Un spectacle mixant danse et diffusion sonore temps-réel
 
-_Infos à venir..._
+_Plus d'infos à venir..._
+
+### Role
+
+Mise à disposition du logiciel mutualisé [Audio Broadcaster](/audio-broadcaster)
+
+### Projet en création
+[Inviter l'équipe en résidence](https://www.emmaterno.com/contact)
+
 
 ### Distribution
 __Chorégraphe__  
@@ -29,14 +38,11 @@ __Danseuses__
 Laure-Anne Deltort  
 Emma Terno
 
-__Création musicale__  
-Simon Jurine  
+__Auteur logiciel__  
+Maxime Touroute  
 
-__Développement informatique__  
-Maxime Touroute
+_...Distribution complète à venir_
 
-### Projet en création
-[Inviter l'équipe en résidence](https://www.emmaterno.com/contact)
 
 <br/>
 <br/>
