--- a/src/pages/2024-01-15-le-motel-des-destins-croises/index.es.mdx
+++ b/src/pages/2024-01-15-le-motel-des-destins-croises/index.es.mdx
@@ -2,7 +2,7 @@
 path: /motel-destins-croises
 layout: article
 category: portfolio
-language: en
+language: es
 title: Le Motel des Destins Croisés
 subtitle: Immersive theater
 tags: other
