--- a/src/pages/2024-01-15-le-motel-des-destins-croises/index.fr.mdx
+++ b/src/pages/2024-01-15-le-motel-des-destins-croises/index.fr.mdx
@@ -6,10 +6,10 @@ language: fr
 title: Le Motel des Destins Croisés
 subtitle: Théâtre immersif
 tags: other
-description: Spectacle immersif interprété par une conteuse, un musicien et un illustrateur.
-date: '2024-02-01'
+description: Théâtre immersif et interactif dans les tréfonds d'un rêve, pour 150 spectateur·ice·s
+date: '2024-01-15'
 image: cover.jpg
-priority: 1
+priority: 2
 embeddedImagesLocal:
 - cover.jpg
 ---
@@ -21,19 +21,22 @@ embeddedImagesLocal:
 
 Plongez dans l’inconscient de Didier, insomniaque, qui peine à dormir et donc, à rêver.  
 
-Spectacle de théâtre immersif pour environ 150 spectateur·ice·s, tout public à partir de 12 ans. Une expérience hybride mêlant art vivant et un outil technologique 
+Spectacle de théâtre immersif pour 150 spectateur·ice·s, tout public. Une expérience hybride mêlant art vivant et un outil technologique 
 permettant aux spectateurs d’agir dans le récit qui se déroule sous leurs yeux comme à l’intérieur d’un rêve.
 
 
 
-### Role : Création logicielle
+### Role
 
-### Logiciel mutualisé : [live-maker](/live-maker)
+* Conception numérique
+* Mise à disposition du logiciel mutualisé [live-maker](/live-maker) permettant l'interaction massive d'un public  
+
+
 
 ### Distribution
 Mise en Scène : Eva Carmen Jarriau  
 Conteption Numérique : Maxime Touroute  
-Scénographie : CAMILLE LEMONNIER  
+Scénographie : Camille Lemmonier
 Dramaturgie : Gaia Singer  
 Interpretes : Laurène Thomas, Tristan Conttin  
 Création sonore : Fabio Meschini  
