--- a/src/pages/2024-01-16-latency/index.es.mdx
+++ b/src/pages/2024-01-16-latency/index.es.mdx
@@ -2,7 +2,7 @@
 path: /latency
 layout: article
 category: portfolio
-language: en
+language: es
 title: Latency
 subtitle: Dance performance
 tags: other
