--- a/src/pages/2024-01-16-latency/index.fr.mdx
+++ b/src/pages/2024-01-16-latency/index.fr.mdx
@@ -9,7 +9,7 @@ tags: other
 description: Spectacle de danse
 date: '2024-02-02'
 image: cover.jpg
-priority: 1
+priority: 2
 embeddedImagesLocal:
 - 1.png
 - 3.png
@@ -23,9 +23,12 @@ embeddedImagesLocal:
 
 Et si la latence n’était pas simplement un problème informatique ? Si derrière ce léger retard se cachait un espace temporel où tout peut se passer ?  
 
-Spectacle dansée avec captation live et videoprojection où le monde réel et le monde numérique entrent en collision.  
+Spectacle dansé avec captation live et videoprojection où le monde réel et le monde numérique entrent en collision.  
 
 
+
+### Projet en création
+[Inviter l'équipe en résidence](mailto:natacha@c-a-b.fr)
 
 
 ### Distribution
@@ -46,8 +49,7 @@ Simon Jurine
 __Développement informatique__  
 Maxime Touroute
 
-### Projet en création
-[Inviter l'équipe en résidence](mailto:natacha@c-a-b.fr)
+
 
 <br/>
 <br/>
