--- a/src/pages/2024-02-08-face-dansee-autre-soie/index.es.mdx
+++ b/src/pages/2024-02-08-face-dansee-autre-soie/index.es.mdx
@@ -2,7 +2,7 @@
 path: /face-dansee-autre-soie
 layout: article
 category: portfolio
-language: en
+language: es
 title: Face Dansée de l'Autre Soie
 subtitle: Augented Reality, Journey
 tags: xr
