--- a/src/pages/2024-02-08-face-dansee-autre-soie/index.fr.mdx
+++ b/src/pages/2024-02-08-face-dansee-autre-soie/index.fr.mdx
@@ -16,36 +16,23 @@ embeddedImagesLocal:
 
 
 ![Photo d'illustration](1.jpg)
-Parcours chorégraphique en réalité augmentée, à découvrir sur le site de l'Autre Soie. Un voyage dans l'espace et le temps, une excursion dans une dimension où l'Autre Soie est habitée par la danse. 
+<br/>
+<br/>
+
+Parcours chorégraphique en réalité augmentée, à découvrir sur le site de l'Autre Soie à Villeurbanne. Un voyage dans l'espace et le temps, 
+une excursion dans une dimension où l'Autre Soie est habitée par la danse et par son histoire fantasmée. 
 
 
+### Role
+* Co-Réalisation artistique  
+* Mise à disposition du logiciel mutualisé [Reveality](/reveality), boite à outils pour créer en réalité augmentée.  
 
-Un projet créé par la compagnie Corps Au Bord, en collaboration avec Reveality et le CCO. 
 
-Avec le soutien de la DRAC Auvergne-Rhône-Alpes (programme « C'est mon patrimoine »), la Métropole de Lyon et de la Ville de Villeurbanne.
-
-### Distribution
-__Co-auteurs__  
-Natacha Paquignon, chorégraphe  
-Quentin Bozon, artiste numérique, designer interactif  
-
-__Chorégraphe__  
-Natacha Paquignon
-
-__Danseuses__  
-Laure-Anne Deltort  
-Natacha Paquignon  
-
-__Création musicale__  
-Simon Jurine  
-
-__Développement informatique__  
-Maxime Touroute
-
-### Projet en création
-[Inviter l'équipe en résidence](mailto:natacha@c-a-b.fr)
+[Plus d'informations sur le site de la compagnie](https://www.natachapaquignon.com/)
 
 <br/>
 <br/>
   
+Avec le soutien de la DRAC Auvergne-Rhône-Alpes (programme « C'est mon patrimoine »), la Métropole de Lyon et de la Ville de Villeurbanne.  
+
 _Credits Photo/Video : Selim Tigrine, Maxime Touroute_
