--- a/src/pages/2020-01-01-deep-roto/index.fr.mdx
+++ b/src/pages/2020-01-01-deep-roto/index.fr.mdx
@@ -22,4 +22,4 @@ embeddedImagesLocal:
 
 [Lien Direct](https://www.linkedin.com/feed/update/urn:li:activity:6768091473599627264/)
 
-Logiciel exploitant des algorithmes mathématiques et d'Intelligence Artificielle à l'état de l'art pour faire le **détourage de vidéos sans fond vert**.
+Logiciel exploitant des algorithmes mathématiques et d'Intelligence Artificielle à l'état de l'art pour faire le **détourage de vidéos sans fond vert**. Créé en 2019. Support terminé (car des IAs similaires sont devenues facilement accessibles !)
