--- a/src/pages/2023-03-01-audio-broadcaster/index.mdx
+++ b/src/pages/2023-03-01-audio-broadcaster/index.mdx
@@ -18,6 +18,7 @@ embeddedImagesLocal:
 
   
 ![Audio Broadcaster's user interface](0.jpg)
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />{' '}
 <br/>
 <br/>
 
@@ -49,7 +50,7 @@ There is no app to download.
 
 ## Use cases
 
-* Audiodescription live
+* Audiodescription live, accessibility
 * Guided tours
 * Audio tours
 * Silent concerts
@@ -57,11 +58,16 @@ There is no app to download.
 * Sound art, creations
 * Another idea? [Tell us!](mailto:maxime.touroute@gmail.com)
 
+### They use this software
+* [Of a Mind](/of-a-mind)
+* [Wonderbox](/wonderbox)
+* [Smart Faune](/smart-faune)
 
 <br/>
 <br/>
 
-<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />{' '}
-  
+
+
 
 ### Ask for access at [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
+
