New : hide photo and colorist page

--- a/src/pages/2022-09-01-painting-mirror/index.fr.mdx
+++ b/src/pages/2022-09-01-painting-mirror/index.fr.mdx
@@ -4,52 +4,123 @@ layout: article
 category: portfolio
 language: fr
 title: Painting Mirror
-subtitle: Mapping Interactif, Selfies, IA
+subtitle: Mapping Interactif, IA
 tags: mapping
-description: Painting Mirror est un videomapping interactif où le public est photographié puis re-projeté dans le style de grands artistes peintres.
+description: Painting Mirror est un videomapping interactif où le public est photographié puis re-projeté dans le style de grands artistes.
 date: '2022-09-01'
 image: 7.jpg
 priority: 1
 embeddedImagesLocal:
+  - PaintingMirror_2.jpg
+  - PaintingMirror_4.jpg
+  - PaintingMirror_3.jpg
   - 16.jpg
   - 11.jpg
   - 12.jpg
-  - 18.jpg
-  - 19.jpg
-  - 15.jpg
-  - 20.jpg
-  - 4.jpg
-  - 6.jpg
   - 7.jpg
-  - 8.jpg
-  - 10.jpg
   - 0.jpg
   - 1.jpg
+  - 8.jpg
   - 2.jpg
+  - NOFEE160EmbassyofFranceeventforCultureNight.JPG
+  - PM-0039.jpg
+  - PaintingMirror_1.jpg
+  - 10.jpg
+  - PXL_20231119_002632282.NIGHT_MaximeTouroute.jpg
+
 ---
 
 ![Cover](7.jpg)
+<ImageGrid props={[props.data.mdx.frontmatter.embeddedImagesLocal[0], props.data.mdx.frontmatter.embeddedImagesLocal[1], props.data.mdx.frontmatter.embeddedImagesLocal[2]]} />{' '}
+
 
 <br/>
 
-__Painting Mirror__ est un videomapping interactif où le public est pris en photo puis apparait videoprojeté dans le style de grands artistes (peinture, dessin). 
-Le public a le temps de photographier sa projection et peut récupérer sa photo stylisée en copie numérique ou imprimée.
-Les styles sont générés par une Intelligence Artificielle.
-L'installation s'adapte à chaque représentation pour utiliser le style d'artistes en lien avec l'événement ou la collection exposée.
 
-<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />{' '}
+__Painting Mirror__ est un videomapping interactif où les photos du public sont projetées et transformées dans le style de grands artistes (peinture, street art, dessin).
+Les styles sont générés par une Intelligence Artificielle. L'installation s'adapte à chaque représentation pour utiliser le style d'artistes en lien avec l'événement et la localité.
+L'installation permet de valoriser un patrimoine créatif local de façon accessible tout en sensibilisant aux usages de l'Intelligence Artificielle.
 
 
 
-Présenté à Culture Night 2022, en partenariat avec l'ambassade de France en Irlande et la National Gallery d'Irlande.
+<br/>
+<br/>
+<br/>
+---
+<br/>
+<br/>
+<br/>
 
-Photos: Courtesy of French Embassy in Ireland – [Dora Kazmierak](https://www.dorakazmierak.com/)
+
+## Comment ça marche ?
+
+Le public est invité à partager ses photos. Elles apparaissent en direct sur la projection pour former une grande galerie de tableaux originaux.
+Cette transformation est faite par notre Intelligence Artificielle capable d’analyser des tableaux existants et d’en reproduire le style.
+
+La méthode de prise de photo est adaptée selon la jauge et le contexte. Nous disposons de 3 solutions : 
+* un photobooth
+* des photographes mobiles
+* une page web accessible au public pour partager des photos en autonomie
+
+<ImageGrid props={[props.data.mdx.frontmatter.embeddedImagesLocal[3], props.data.mdx.frontmatter.embeddedImagesLocal[4], props.data.mdx.frontmatter.embeddedImagesLocal[5]]} />{' '}
+
+
+## Pendant l'événement
+Les publics se retrouvent dans une grande galerie de tableaux projetés. Ils partagent leurs photos et s’amusent à la retrouver. L’ambiance est conviviale et nombreux prennent des photos de la projection en souvenir.
+
+Nous sommes présents sur place pour échanger avec le public, aider à prendre en photo, animer la projection et expliquer comment fonctionne l'Intelligence Artificielle aux curieux.
+
+Si les participants partagent eux-mêmes leurs photos, nous effectuons une modération stricte avec notre outil de modération.
+
+Il n'y a pas de limite de jauge : tout le monde peut participer en même temps.
+
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal.slice(7, 13)} />{' '}
+
+
+## Les artistes locaux à l’honneur
+
+Nous collaborons avec les musées et artistes locaux pour concevoir des transformations de style inspirées de leurs oeuvres.
+Le dispositif est une nouvelle façon de valoriser les artistes/collections locales en permettant au public de s'emparer des styles picturaux. 
+
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal.slice(13)} />{' '}
+
+
+
+## Nos formats 
+
+Le projet est flexible et peut s’adapter à de nombreux lieux et contextes :  
+* Projection monumentale
+* Projection modeste (intérieur ou extérieur)
+* Exposition permanente
+* Tournées
+* Avec l'équipe artistique sur place, à distance, ou en autonomie (accès logiciel)
+
+Nous proposons également des ateliers de découverte de l'intelligence artificielle avec médiation scientifique de notre équipe.
+
+
+
+
+
+
 
 
 ## Réalisation
 
 Tom VENIAT, Maxime TOUROUTE, Rémy DUPANLOUP
 
-## Réservation
+## Diffusion
 
-[maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
+Contactez [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)  
+
+Le projet est simple à mettre en place.  
+[Télécharger la fiche technique type](./PaintingMirrorFicheTechnique2024FR.pdf)
+
+
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+
+
+_Credits Photo: Courtesy of French Embassy in Ireland – [Dora Kazmierak](https://www.dorakazmierak.com/) ; [Sasko Lazarov](https://www.instagram.com/saskolazaro/)_ ; _Alliance Française de Bogota_ ; _Maxime Touroute_
