--- a/src/pages/page-grading-showcase/index.es.mdx
+++ b/src/pages/page-grading-showcase/index.es.mdx
@@ -5,7 +5,7 @@ category: portfolio
 language: es
 title: Etalonaje
 subtitle: Portfolio
-tags: other
+tags: none
 description: Portfolio de Etalonajes de Maxime Touroute
 date: '2020-01-01'
 image: ber2_a.jpg
