--- a/src/pages/page-photography/index.es.mdx
+++ b/src/pages/page-photography/index.es.mdx
@@ -5,7 +5,7 @@ category: portfolio
 language: es
 title: Fotografía
 priority: 6
-tags: other
+tags: none
 subtitle: Portfolio
 description: Selección de trabajos fotográficos
 image: experiments/b-22.jpg
