--- a/src/pages/page-photography/index.mdx
+++ b/src/pages/page-photography/index.mdx
@@ -6,7 +6,7 @@ language: en
 title: Photography
 priority: 6
 subtitle: Portfolio
-tags: other
+tags: none
 description: A selection of photography works.
 image: experiments/b-22.jpg
 embeddedImagesLocal:
