--- a/src/pages/page-photography/index.fr.mdx
+++ b/src/pages/page-photography/index.fr.mdx
@@ -5,7 +5,7 @@ category: portfolio
 language: fr
 title: Photographie
 priority: 6
-tags: other
+tags: none
 subtitle: Portfolio
 description: Selection de travaux photo
 image: experiments/b-22.jpg
